# ChangeLog for media-sound/mpg123
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/mpg123/ChangeLog,v 1.185 2009/05/26 21:15:37 fauli Exp $

  26 May 2009; Christian Faulhammer <fauli@gentoo.org> mpg123-1.7.3.ebuild:
  stable x86, bug 270781

  23 May 2009; Jeroen Roovers <jer@gentoo.org> mpg123-1.7.3.ebuild:
  Stable for HPPA (bug #270781).

  23 May 2009; Thomas Anderson <gentoofan23@gentoo.org> mpg123-1.7.3.ebuild:
  stable amd64, bug 270781

  21 May 2009; Samuli Suominen <ssuominen@gentoo.org> mpg123-1.7.3.ebuild:
  Remove arts support wrt #270575.

*mpg123-1.7.3 (30 Apr 2009)

  30 Apr 2009; Samuli Suominen <ssuominen@gentoo.org> -mpg123-1.3.1.ebuild,
  -mpg123-1.6.2.ebuild, -mpg123-1.6.4.ebuild, +mpg123-1.7.3.ebuild:
  Version bump.

  10 Apr 2009; Raúl Porcel <armin76@gentoo.org> mpg123-1.7.2.ebuild:
  ia64/x86 stable wrt #265342

  08 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> mpg123-1.7.2.ebuild:
  Stable on sparc, security bug #265342

  08 Apr 2009; Tobias Heinlein <keytoaster@gentoo.org> mpg123-1.7.2.ebuild:
  amd64 stable wrt security bug #265342

  08 Apr 2009; Tobias Klausmann <klausman@gentoo.org> mpg123-1.7.2.ebuild:
  Stable on alpha, bug #265342

  08 Apr 2009; Tobias Klausmann <klausman@gentoo.org> ChangeLog:
  Stable on alpha, bug #265342

  08 Apr 2009; Jeroen Roovers <jer@gentoo.org> mpg123-1.7.2.ebuild:
  Stable for HPPA (bug #265342).

  08 Apr 2009; Brent Baude <ranger@gentoo.org> mpg123-1.7.2.ebuild:
  Marking mpg123-1.7.2 ppc64 and ppc for bug 265342

*mpg123-1.7.2 (08 Apr 2009)

  08 Apr 2009; Alexis Ballier <aballier@gentoo.org> +mpg123-1.7.2.ebuild:
  version bump, bug #264829 and bug #265342

  30 Mar 2009; Raúl Porcel <armin76@gentoo.org> mpg123-1.3.1.ebuild,
  mpg123-1.6.2.ebuild, mpg123-1.6.4.ebuild:
  Add ~arm wrt #258797

*mpg123-1.6.4 (11 Feb 2009)

  11 Feb 2009; Alexis Ballier <aballier@gentoo.org> +mpg123-1.6.4.ebuild:
  version bump
